Improve popup of Combo: The SELECT is displayed in document.body rather in Shell's handle element. Fix layout bug for Combo in IE.

--- a/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Combo.css
+++ b/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Combo.css
@@ -1,7 +1,7 @@
 .combo-default {
 	padding: 0;
 	border-style:none;
-	overflow:hidden;
+	/*overflow:hidden;*/
 	position:absolute;
 	border-width:2px;
 	border-style:inset;
@@ -16,7 +16,8 @@
 }
 
 .combo-default button {
-	float:right;
+	/*float:right;*/
+	position:absolute;
 	right:0;
 	top:0;
 	height:100%;
@@ -25,6 +26,9 @@
 	padding:0;
 	font-size:0;
 	margin:0;
+}
+* html .combo-default button {
+	right:-2px;
 }
 .combo-button-arrow-down {
 	margin:auto;
